--- a/src/test/resources/META-INF/frontend/styles/shared-styles.css
+++ b/src/test/resources/META-INF/frontend/styles/shared-styles.css
@@ -32,6 +32,10 @@ img.applogo {
 	height: 22px;
 }
 
+.hamlet {
+	user-select: none;
+}
+
 .hamlet paper-card {
 	max-width: 600px;
 	min-width: 200px;
