--- a/src/main/resources/META-INF/frontend/styles/applayout-styles.css
+++ b/src/main/resources/META-INF/frontend/styles/applayout-styles.css
@@ -1,10 +1,14 @@
 .sub-menu{
-	background-color: var(--lumo-primary-color-10pct);
+  background-color: var(--lumo-primary-color-10pct);
+}
+
+fc-menuitem.iron-selected > iron-collapse-button > .iron-collapse-button > paper-icon-item {            
+  font-weight: var(--paper-item-selected-weight, bold);
 }
 
 app-toolbar {
   background-color: #4285f4;
-      color: #fff;
+  color: #fff;
 }
 
 paper-icon-button + [main-title] {
@@ -12,34 +16,34 @@ paper-icon-button + [main-title] {
 }
 
 paper-icon-button {
-	--paper-icon-button-disabled-text: var(--lumo-disabled-text-color);
+  --paper-icon-button-disabled-text: var(--lumo-disabled-text-color);
 }
 
 paper-progress {
   display: block;
-      width: 100%;
-      --paper-progress-active-color: rgba(255, 255, 255, 0.5);
-      --paper-progress-container-color: transparent;
+  width: 100%;
+  --paper-progress-active-color: rgba(255, 255, 255, 0.5);
+  --paper-progress-container-color: transparent;
 }
 
 app-header {
   position: var(--layout-fixed-top_-_position); top: var(--layout-fixed-top_-_top); left: var(--layout-fixed-top_-_left); right: var(--layout-fixed-top_-_right);
-      color: #fff;
-      --app-header-background-rear-layer_-_background-color:  #ef6c00;;
+  color: #fff;
+  --app-header-background-rear-layer_-_background-color:  #ef6c00;;
   z-index: 1000;
 }
 
 app-drawer {
   --app-drawer-scrim-background: rgba(0, 0, 100, 0.8);
-	z-index: 1000;
+    z-index: 1000;
 }
 
 app-drawer paper-listbox {
-	overflow-y: auto;
+    overflow-y: auto;
 }
 
 app-drawer paper-item, 
 app-drawer paper-icon-item,
 app-drawer iron-collapse-button {
-	cursor: pointer;
+    cursor: pointer;
 }
