--- a/src/main/resources/META-INF/frontend/styles/applayout-styles.css
+++ b/src/main/resources/META-INF/frontend/styles/applayout-styles.css
@@ -34,6 +34,10 @@ app-drawer {
     z-index: 1000;
 }
 
+quick-popup-overlay {
+	--quick-popup-overlay-z-index: 1001;
+}
+
 app-drawer paper-listbox {
     overflow-y: auto;
 }
